# alexandria

./: .gitignore  CONTEXT.md  README.md  main.py  planning.md  pyproject.toml  reminder.md  stuff-to-fix.md  upgrades.md
.alexandria_vault/lancedb/__manifest/_transactions/: 0-7e7d17f4-8631-46f7-b9c8-fab2b3b5cc7b.txn
.alexandria_vault/lancedb/vault_edges.lance/_transactions/: 0-6be28552-a060-4ca9-a9c5-9d0572d48c38.txn
.alexandria_vault/lancedb/vault_records.lance/_transactions/: 0-c954176d-d63c-46d4-9541-1f5be53288f7.txn
scripts/: generate_baseline.py  generate_testset.py  ingest_docs.py
src/alexandria/: discovery.py  embedder.py  extraction.py  graph_builder.py  retriever.py
src/alexandria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/alexandria/graph/: matrix.py
src/alexandria/storage/: paths.py  schemas.py  vault.py
src/alexandria/workers/: backround.py
tests/: test_discovery.py  test_extraction.py  test_graph_builder.py  test_hybrid_rag.py  test_paths.py  test_vault.py
