[project]
name = "alexandria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "lancedb>=0.34.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "trafilatura>=2.1.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "pyarrow.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]  # <-- Add this line
asyncio_default_fixture_loop_scope = "function"
