[project]
name = "alexandria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "einops>=0.8.2",
    "httpx>=0.28.1",
    "lancedb>=0.34.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "trafilatura>=2.1.0",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "langchain-community<0.4",
    "langchain-ollama>=1.1.0",
    "mypy>=2.2.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ragas>=0.4.3",
    "ruff>=0.15.21",
]
[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "pyarrow.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]  # <-- Add this line
asyncio_default_fixture_loop_scope = "function"
