[project]
name = "alexandria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crawl4ai>=0.9.2",
    "duckduckgo-search>=8.1.1",
    "einops>=0.8.2",
    "fastmcp>=3.4.4",
    "httpx>=0.28.1",
    "lancedb>=0.34.0",
    "langchain-huggingface>=1.2.2",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "ragas>=0.4.3",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=5.6.0",
    "tree-sitter>=0.26.0",
    "tree-sitter-language-pack>=1.13.2",
]

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "langchain-community<0.4",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "mypy>=2.2.0",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ragas>=0.4.3",
    "ruff>=0.15.21",
]
[[tool.mypy.overrides]]
module = [
    "lancedb.*",
    "pyarrow.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]  # <-- Add this line
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alexandria"]
